--- a/views/homepage.html
+++ b/views/homepage.html
@@ -5,25 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=`, initial-scale=1.0" />
     <title>Home Budget App</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/style/homepage.css" />
   </head>
-  <body>
-    <header class="main-header">
-      <h1 class="main-header__title">home budget app</h1>
-      <nav class="main-header__nav">
+  <body class="container">
+    <header class="row bgc">
+      <div class="col col-lg-6">
+        <h1 class="header__title">home budget app</h1>
+      </div>
+      <!-- <nav class="col-xl-4">
         <ul class="main-header__item-list">
-          <li class="main-header__item"><a href="/register">Register</a></li>
           <li class="main-header__item">
-            <a href="/register/login">Log in</a>
+            <a class="btn btn-secondary" role="button" href="/register"
+              >Register</a
+            >
+          </li>
+          <li class="main-header__item">
+            <a class="btn btn-secondary" role="button" href="/register/login"
+              >Log in</a
+            >
           </li>
         </ul>
-      </nav>
+      </nav> -->
     </header>
-    <main class="main">
+    <!-- <main class="main">
       <div class="main__carousel-container">
         <p class="main__carousel-title">Manage your budget</p>
         <div class="main__carousel"></div>
       </div>
-    </main>
+    </main> -->
+    <script src="/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
