--- a/views/homepage.html
+++ b/views/homepage.html
@@ -11,35 +11,67 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/flickity.css" media="screen" />
     <link rel="stylesheet" href="/style/homepage.css" />
   </head>
   <body class="container">
-    <header class="row bgc">
-      <div class="col col-lg-6">
+    <header class="row">
+      <div class="col">
         <h1 class="header__title">home budget app</h1>
       </div>
-      <!-- <nav class="col-xl-4">
-        <ul class="main-header__item-list">
-          <li class="main-header__item">
-            <a class="btn btn-secondary" role="button" href="/register"
+      <nav class="header__nav col-lg-auto">
+        <ul class="header__item-list">
+          <li class="list-inline-item">
+            <a
+              href="/register"
+              class="header__btn btn btn-secondary"
+              role="button"
               >Register</a
             >
           </li>
-          <li class="main-header__item">
-            <a class="btn btn-secondary" role="button" href="/register/login"
+          <li class="list-inline-item">
+            <a
+              href="/register/login"
+              class="header__btn header__btn--login btn btn-secondary"
+              role="button"
               >Log in</a
             >
           </li>
         </ul>
-      </nav> -->
+      </nav>
     </header>
-    <!-- <main class="main">
-      <div class="main__carousel-container">
-        <p class="main__carousel-title">Manage your budget</p>
-        <div class="main__carousel"></div>
+    <main class="main row justify-content-center">
+      <div class="main__title-container">
+        <p class="main__title">Manage your budget</p>
       </div>
-    </main> -->
+      <div class="flickity-carousel col-12">
+        <div class="main-carousel">
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+          <div class="carousel-cell"></div>
+        </div>
+      </div>
+    </main>
+    <div class="register-login__container row justify-content-center">
+      <p class="register-login__title col-12">Create an account or login</p>
+      <button
+        class="register-login__button btn btn-secondary col-4"
+        href="/register"
+      >
+        Register
+      </button>
+      <button
+        class="register-login__button btn btn-secondary col-4"
+        href="/register/login"
+      >
+        Log in
+      </button>
+    </div>
     <script src="/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/flickity.pkgd.min.js"></script>
+    <script src="/js/flickity.js"></script>
   </body>
 </html>
