--- a/views/error-page.html
+++ b/views/error-page.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Error</title>
+    <title>Error | Home Budget App</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style/common-parts.css" />
   </head>
-  <body>
-    <header>
-      <h1>home budget app</h1>
+  <body class="container">
+    <header class="row">
+      <div class="col">
+        <h1 class="header__title">home budget app</h1>
+      </div>
     </header>
-    <div>
-      <h2>Page not found!</h2>
-    </div>
+    <main class="main row justify-content-center">
+      <div class="main__title-container">
+        <p class="main__title">Page not found!</p>
+      </div>
+    </main>
+    <script src="/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
