Added link stylesheet with common-parts

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/flickity.css" media="screen" />
+    <link rel="stylesheet" href="/style/common-parts.css" />
     <link rel="stylesheet" href="/style/homepage.css" />
   </head>
   <body class="container">
