Changed name from register to login

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head.ejs') %>
-    <link rel="stylesheet" href="/style/register.css" />
+    <link rel="stylesheet" href="/style/login.css" />
    <%- include('includes/nav.ejs') %>
     </header>
     <main class="main-container row justify-content-center">
@@ -27,7 +27,7 @@
             Sign in
           </button>
           <small class="form__smallText form-text text-muted"
-            >New? <a href="../login">Create an account.</a></small
+            >New? <a href="/register">Create an account.</a></small
           >
         </form>
       </div>
