--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head.ejs') %>
-    <link rel="stylesheet" href="/style/login.css" />
+    <link rel="stylesheet" href="/style/register-login.css" />
    <%- include('includes/nav.ejs') %>
     </header>
     <main class="main-container row justify-content-center">
