Added modifier to class - form__smallText--register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -44,7 +44,7 @@
           <button type="submit" class="form__signin-btn btn btn-success">
             Register
           </button>
-          <small class="form__smallText form-text text-muted"
+          <small class="form__smallText form__smallText--register form-text text-muted"
             >Have you got an account?<a class="form__smallText--signin" href="/login">Sign in</a></small
           >
         </form>
