--- a/public/style/homepage.css
+++ b/public/style/homepage.css
@@ -79,9 +79,17 @@
 }
 
 .register-login__button {
-  font: 400 18px 'Montserrat', sans-serif;
-  letter-spacing: 0.5px;
   width: 120px;
   height: 50px;
   margin: 0 10px;
+}
+
+.register-login__button a {
+  font: 400 18px 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
+  color: #fff;
+}
+
+.register-login__button a:focus {
+  text-decoration: none;
 }
