Updated path in href in nav on desktop views

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -14,7 +14,7 @@
           </li>
           <li class="list-inline-item">
             <a
-              href="/register/login"
+              href="/login"
               class="header__btn header__btn--login btn btn-secondary"
               role="button"
               >Log in</a
