Added 'a' tag to button register

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -39,6 +39,7 @@
     </main>
     <div class="register-login__container row justify-content-center">
       <p class="register-login__title col-12">Create an account or login</p>
+      <button class="register-login__button btn btn-secondary col-4"><a href="/register">Register</a></button>
       <button
         class="register-login__button btn btn-secondary col-4"
         href="/register"
