--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -42,15 +42,7 @@
       <button class="register-login__button btn btn-secondary col-4"><a href="/register">Register</a></button>
       <button
         class="register-login__button btn btn-secondary col-4"
-        href="/register"
-      >
-        Register
-      </button>
-      <button
-        class="register-login__button btn btn-secondary col-4"
-        href="/register/login"
-      >
-        Log in
+      ><a href="/login">Sign in</a>
       </button>
     </div>
 <%- include('includes/scripts.ejs') %>
