--- a/views/user/budget-expense.ejs
+++ b/views/user/budget-expense.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head.ejs') %>
+  <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
 <link rel="stylesheet" href="/style/budget-expense.css" />
    <%- include('../includes/nav.ejs') %>
     </header>
@@ -24,7 +25,7 @@
               required
             />
           </div>
-          <button type="submit" class="form__update-budget-btn btn btn-success">
+          <button class="form__update-budget-btn btn btn-success">
             Update budget
           </button>
         </form>
