--- a/views/user/budget-expense.ejs
+++ b/views/user/budget-expense.ejs
@@ -79,5 +79,7 @@
   </div>
 </main>
 <%- include('../includes/scripts.ejs') %>
+<script src="/js/Balance.js"></script>
+<script src="/js/Budget.js"></script>
 <script src="/js/budget-expense.js"></script>
 <%- include('../includes/end.ejs') %>
