Added new script - Expense.js

--- a/views/user/budget-expense.ejs
+++ b/views/user/budget-expense.ejs
@@ -81,5 +81,6 @@
 <%- include('../includes/scripts.ejs') %>
 <script src="/js/Balance.js"></script>
 <script src="/js/Budget.js"></script>
+<script src="/js/Expense.js"></script>
 <script src="/js/budget-expense.js"></script>
 <%- include('../includes/end.ejs') %>
