Added new tags to table element

--- a/views/user/budget-expense.ejs
+++ b/views/user/budget-expense.ejs
@@ -73,7 +73,11 @@
           <span class="information__amount information__amount--balance col">---</span>
         </div>
       </section>
-      <div class="table col-lg-6 order-lg-12"></div>
+      <div class="table col-lg-6 order-lg-12">
+        <table class="table table-striped">
+          <tbody></tbody>
+        </table>
+      </div>
       <% } %>
     </div>
   </div>
