--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
     </header>
     <main class="main-container row justify-content-center">
       <div class="form-container col col-lg-6">
-        <form>
+        <form action="/register" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input
