Added a href element to h1 element in navbar

--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -2,5 +2,5 @@
   <body class="container">
     <header class="row">
       <div class="col">
-        <h1 class="header__title">home budget app</h1>
+        <h1 class="header__title"><a class="header__link" href="/">home budget app</a></h1>
       </div>
