--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,6 +2,20 @@
     <link rel="stylesheet" href="/style/register-login.css" />
    <%- include('includes/nav.ejs') %>
     </header>
+    <% if (error) { %>
+      <div id="alert-message" class="container">
+        <div class="alert alert-warning row" role="alert">
+          <%= message %>
+        </div>
+      </div>
+    <% } else if(successfulResgistration) { %> 
+      <div id="alert-message" class="container">
+        <div class="alert alert-success row" role="alert">
+          <%= messageRegistration %>
+          <span class="span-login"> Please, <a href="/login"> sign in!</a></span>
+        </div>
+      </div>
+    <% } %> 
     <main class="main-container row justify-content-center">
       <div class="form-container col col-lg-6">
         <form action="/register" method="POST">
@@ -41,5 +55,8 @@
           >
       </div>
     </main>
+    <% if (error || successfulResgistration) { %>
+      <%- include('includes/register-alerts.ejs') %>
+    <% } %> 
 <%- include('includes/scripts.ejs') %>
 <%- include('includes/end.ejs') %>
