Removed successful alert from /register site

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,14 +8,7 @@
           <%= message %>
         </div>
       </div>
-    <% } else if(successfulResgistration) { %> 
-      <div id="alert-message" class="container">
-        <div class="alert alert-success row" role="alert">
-          <%= messageRegistration %>
-          <span class="span-login"> Please, <a href="/login"> sign in!</a></span>
-        </div>
-      </div>
-    <% } %> 
+    <% } %>
     <main class="main-container row justify-content-center">
       <div class="form-container col col-lg-6">
         <form action="/register" method="POST">
@@ -55,7 +48,7 @@
           >
       </div>
     </main>
-    <% if (error || successfulResgistration) { %>
+    <% if (error) { %>
       <%- include('includes/register-alerts.ejs') %>
     <% } %> 
 <%- include('includes/scripts.ejs') %>
