--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
     <% } %> 
     <main class="main-container row justify-content-center">
       <div class="form-container col col-lg-6">
-        <form>
+        <form action="/login" method="POST">
           <div class="form-group">
             <label for="email">Email address</label>
             <input
