--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
     <% if (error) { %>
       <div id="alert-message" class="container">
         <div class="alert alert-warning row" role="alert">
-          <%= message %>
+          <%= messageError %>
         </div>
       </div>
     <% } %>
@@ -49,7 +49,7 @@
       </div>
     </main>
     <% if (error) { %>
-      <%- include('includes/register-alerts.ejs') %>
+      <%- include('includes/alert-message.ejs') %>
     <% } %> 
 <%- include('includes/scripts.ejs') %>
 <%- include('includes/end.ejs') %>
