Used isLogged instead of budget

--- a/views/user/budget-expense.ejs
+++ b/views/user/budget-expense.ejs
@@ -55,7 +55,7 @@
           </button>
         </form>
       </div>
-      <% if(budget) { %>
+      <% if(isLogged) { %>
       <section class="information container col-lg-6 order-lg-6">
         <div class="row">
           <ion-icon class="information__icon text-success col" name="cash"></ion-icon>
