--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
    <%- include('includes/nav.ejs') %>
     </header>
     <% if (error) { %>
-      <div id="alert-message" class="container">
+      <div id="alert-message" class="container position-absolute">
         <div class="alert alert-warning row" role="alert">
           <%= messageError %>
         </div>
