--- a/public/style/common-parts.css
+++ b/public/style/common-parts.css
@@ -67,3 +67,9 @@
     margin: 75px 0 0 -20%;
   }
 }
+
+.navbar-user-name {
+  padding: 0 15px;
+  letter-spacing: 0.5px;
+  text-transform: capitalize;
+}
