Added input hidden to handling csrfToken

--- a/views/user/budget-expense.ejs
+++ b/views/user/budget-expense.ejs
@@ -25,6 +25,7 @@
               required
             />
           </div>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <button class="form__update-budget-btn btn btn-success">
             Update budget
           </button>
@@ -50,6 +51,7 @@
               required
             />
           </div>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <button class="form__add-expense-btn btn btn-danger">
             Add expense
           </button>
