--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,6 +30,7 @@
               required
             />
           </div>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <button type="submit" class="form__signin-btn btn btn-success">
             Sign in
           </button>
