--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,13 @@
         </div>
       </div>
     <% } %> 
+    <% if(errorMessageFlash) { %> 
+      <div id="alert-message" class="container position-absolute">
+        <div class="alert-warning alert row" role="alert">
+          <%= errorMessageFlash %>
+        </div>
+      </div>
+    <% } %> 
     <main class="main-container row justify-content-center">
       <div class="form-container col col-lg-6">
         <form action="/login" method="POST">
