--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,10 +2,17 @@
     <link rel="stylesheet" href="/style/register-login.css" />
    <%- include('includes/nav.ejs') %>
     </header>
-    <% if (error) { %>
+    <% if (errorMessageFlash) { %>
       <div id="alert-message" class="container position-absolute">
         <div class="alert alert-warning row" role="alert">
-          <%= messageError %>
+          <%= errorMessageFlash %>
+        </div>
+      </div>
+    <% } %>
+    <% if (successfulMessageFlash) { %>
+      <div id="alert-message" class="container position-absolute">
+        <div class="alert alert-success row" role="alert">
+          <%= successfulMessageFlash %>
         </div>
       </div>
     <% } %>
@@ -49,7 +56,7 @@
           >
       </div>
     </main>
-    <% if (error) { %>
+    <% if (errorMessageFlash || successfulMessageFlash) { %>
       <%- include('includes/alert-message.ejs') %>
     <% } %> 
 <%- include('includes/scripts.ejs') %>
