--- a/views/user/budget-expense.ejs
+++ b/views/user/budget-expense.ejs
@@ -59,7 +59,7 @@
       </div>
       <% if(isLogged) { %>
       <div id="alert-message" class="alert alert-success row position-fixed alert-message" role="alert">
-        <span><strong>Hi <%= userName %>!</strong> Nice to see you again!</span>
+        <span><%= successfulMessageFlash %></span>
       </div>
 
       <section class="information container col-lg-6 order-lg-6">
