--- a/views/includes/error-head.ejs
+++ b/views/includes/error-head.ejs
@@ -12,3 +12,4 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style/common-parts.css" />
+    <link rel="stylesheet" href="/style/homepage.css" />
